--- a/src/_includes/main/head.html
+++ b/src/_includes/main/head.html
@@ -131,7 +131,8 @@
 <!-- ########################################
                    website
     ######################################### -->
-<link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/website.css?v={{ site.time | date: '%Y%m%d%H%M%S%L' }}">
+<!-- <link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/website.css?v={{ site.time | date: '%Y%m%d%H%M%S%L' }}"> -->
+<link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/website.css">
 <script async type="text/javascript" src="{{ relBase }}/assets/website.js"></script>
 
 <!-- ########################################
