--- a/src/_includes/main/head.html
+++ b/src/_includes/main/head.html
@@ -102,8 +102,8 @@
 <!-- ########################################
                    jQuery
     ######################################### -->
-<script async type="text/javascript" src="{{ relBase }}/assets/jquery/jquery-3.6.1.min.js"></script>
-<script async type="text/javascript" src="{{ relBase }}/assets/extend/jquery.js"></script>
+<script type="text/javascript" src="{{ relBase }}/assets/jquery/jquery-3.6.1.min.js"></script>
+<script type="text/javascript" src="{{ relBase }}/assets/extend/jquery.js"></script>
 
 <!-- ########################################
                   Bootstrap
