cleanup head and remove unnecessary libs

--- a/src/_includes/main/head.html
+++ b/src/_includes/main/head.html
@@ -1,6 +1,8 @@
+{%- comment %}
 <!-- ########################################
                        meta
    ######################################### -->
+{%- endcomment %}
 
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 <meta charset="UTF-8">
@@ -33,32 +35,33 @@
 <meta http-equiv="refresh" content="0; url={{ relBase }}{{ subs[0].url }}"/>
 {%- endif %}
 
+{%- comment %}
 <!-- ########################################
                     icons
    ######################################### -->
+{%- endcomment %}
 
 <link async rel="icon" type="image/x-icon" href="{{ relBase }}/media/favicon/16.png">
 <link async rel="shortcut icon" type="image/x-icon" href="{{ relBase }}/media/favicon/16.png">
 <link async rel="icon" type="image/x-icon" href="{{ relBase }}/media/favicon/32.png">
 <link async rel="shortcut icon" type="image/x-icon" href="{{ relBase }}/media/favicon/32.png">
-<link async rel="icon" href="{{ relBase }}/media/favicon/logo-light.svg" type="image/x-icon" >
-<link async rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-light.svg" type="image/x-icon" >
-<link async rel="icon" href="{{ relBase }}/media/favicon/logo-light.svg" media="(prefers-color-scheme: light)" type="image/x-icon" >
-<link async rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-light.svg" media="(prefers-color-scheme: light)" type="image/x-icon" >
-<!-- <link async rel="icon" href="{{ relBase }}/media/favicon/logo-dark.svg" media="(prefers-color-scheme: dark)" type="image/x-icon" >
-<link async rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-dark.svg" media="(prefers-color-scheme: dark)" type="image/x-icon" > -->
+<link async rel="icon" href="{{ relBase }}/media/favicon/logo-light.svg" type="image/x-icon">
+<link async rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-light.svg" type="image/x-icon">
+<link async rel="icon" href="{{ relBase }}/media/favicon/logo-light.svg" media="(prefers-color-scheme: light)" type="image/x-icon">
+<link async rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-light.svg" media="(prefers-color-scheme: light)" type="image/x-icon">
+{%- comment %}
+<!-- It seems as if this tags significantly increase the loading time.
+<link async rel="icon" href="{{ relBase }}/media/favicon/logo-dark.svg" media="(prefers-color-scheme: dark)" type="image/x-icon" >
+<link async rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-dark.svg" media="(prefers-color-scheme: dark)" type="image/x-icon" >
+-->
+{%- endcomment %}
 
 {% if page.external_link==nil and page.is_separator!=true -%}
-<!-- ########################################
-                  JS + Helper
-    ######################################### -->
-
-<!-- <script type="text/javascript" src="{{ relBase }}/assets/extend/ecma.js"></script> -->
-<!-- <script type="text/javascript" src="{{ relBase }}/assets/extend/jxg_compensation.js"></script> -->
-
+{%- comment %}
 <!-- ########################################
                       MathJax
     ######################################### -->
+{%- endcomment %}
 <script async type="text/javascript">
     window.MathJax = {
         loader: {
@@ -77,9 +80,11 @@
 </script>
 <script async type="text/javascript" src="{{ relBase }}/assets/mathjax/es5/tex-chtml.js"></script>
 
+{%- comment %}
 <!-- ########################################
                   JSXGraph
     ######################################### -->
+{%- endcomment %}
 
 {%- assign stringToCheck = const.url.css %}
 {%- assign checkArray = stringToCheck | split: ':' -%}
@@ -99,45 +104,41 @@
 {%- endif -%}
 <script type="text/javascript" src="{{ link }}"></script>
 
+{%- comment %}
 <!-- ########################################
                    jQuery
     ######################################### -->
+{%- endcomment %}
 <script type="text/javascript" src="{{ relBase }}/assets/jquery/jquery-3.6.1.min.js"></script>
 <script type="text/javascript" src="{{ relBase }}/assets/extend/jquery.js"></script>
 
+{%- comment %}
 <!-- ########################################
                   Bootstrap
     ######################################### -->
+{%- endcomment %}
 <link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/bootstrap/bootstrap-individual.min.css">
 <script async type="text/javascript" src="{{ relBase }}/assets/extend/popper.min.js"></script>
 <script async type="text/javascript" src="{{ relBase }}/assets/extend/tether.min.js"></script>
 <script async type="text/javascript" src="{{ relBase }}/assets/bootstrap/bootstrap.min.js"></script>
 <script async type="text/javascript" src="{{ relBase }}/assets/extend/bootstrap.js"></script>
-<script async type="text/javascript" src="{{ relBase }}/assets/extend/masonry.min.js"></script>
 
-<!-- ########################################
-                   jszip
-    ######################################### -->
-<!-- <script async type="text/javascript" src="{{ relBase }}/assets/jszip/jszip.min.js"></script> -->
-
+{%- comment %}
 <!-- ########################################
                   FontAwesome
     ######################################### -->
+{%- endcomment %}
 <link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/fontawesome.css"/>
 <link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/brands.css"/>
 <link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/solid.css"/>
 <link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/regular.css"/>
 
+{%- comment %}
 <!-- ########################################
                    website
     ######################################### -->
-<!-- <link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/website.css?v={{ site.time | date: '%Y%m%d%H%M%S%L' }}"> -->
+{%- endcomment %}
 <link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/website.css">
 <script async type="text/javascript" src="{{ relBase }}/assets/website.js"></script>
-
-<!-- ########################################
-                  clipping
-    ######################################### -->
-{% include main/clip-pattern.html %}
 
 {%- endif -%}
