--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -6,6 +6,7 @@
 </head>
 {% if page.external_link==nil and page.is_separator!=true -%}
 <body data-role="page" class="position-relative">
+    {% include main/clip-pattern.html %}
     {% include main/menu.html %}
     {% include main/topbar.html %}
 
