--- a/src/_layouts/plain.html
+++ b/src/_layouts/plain.html
@@ -6,6 +6,7 @@
 </head>
 {% if page.external_link==nil and page.is_separator!=true -%}
 <body data-role="page" class="position-relative">
+    {% include main/clip-pattern.html %}
 
     <noscript>
         <div class="alert alert-danger" role="alert">
