--- a/src/assets/website.css
+++ b/src/assets/website.css
@@ -59098,15 +59098,15 @@ video {
 }
 @font-face {
   font-family: FiraSans;
-  src: url("fonts/FiraSans/FiraSans-Regular.ttf");
+    src: url("fonts/FiraSans/FiraSans-Regular.woff") format("woff"), url("fonts/FiraSans/FiraSans-Regular.ttf") format("ttf");
 }
 @font-face {
   font-family: FiraSansCondensed;
-  src: url("fonts/FiraSansCondensed/FiraSansCondensed-SemiBold.ttf");
+    src: url("fonts/FiraSansCondensed/FiraSansCondensed-SemiBold.woff") format("woff"), url("fonts/FiraSansCondensed/FiraSansCondensed-SemiBold.ttf");
 }
 @font-face {
   font-family: FiraMono;
-  src: url("fonts/FiraMono/FiraMono-Regular.ttf");
+    src: url("fonts/FiraMono/FiraMono-Regular.woff") format("woff"), url("fonts/FiraMono/FiraMono-Regular.ttf");
 }
 :root {
   --bs-body-font-family: 'FiraSans';
