--- a/src/_includes/main/head.html
+++ b/src/_includes/main/head.html
@@ -41,18 +41,18 @@
    ######################################### -->
 {%- endcomment %}
 
-<link async rel="icon" type="image/x-icon" href="{{ relBase }}/media/favicon/16.png">
-<link async rel="shortcut icon" type="image/x-icon" href="{{ relBase }}/media/favicon/16.png">
-<link async rel="icon" type="image/x-icon" href="{{ relBase }}/media/favicon/32.png">
-<link async rel="shortcut icon" type="image/x-icon" href="{{ relBase }}/media/favicon/32.png">
-<link async rel="icon" href="{{ relBase }}/media/favicon/logo-light.svg" type="image/x-icon">
-<link async rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-light.svg" type="image/x-icon">
-<link async rel="icon" href="{{ relBase }}/media/favicon/logo-light.svg" media="(prefers-color-scheme: light)" type="image/x-icon">
-<link async rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-light.svg" media="(prefers-color-scheme: light)" type="image/x-icon">
+<link rel="icon" type="image/x-icon" href="{{ relBase }}/media/favicon/16.png">
+<link rel="shortcut icon" type="image/x-icon" href="{{ relBase }}/media/favicon/16.png">
+<link rel="icon" type="image/x-icon" href="{{ relBase }}/media/favicon/32.png">
+<link rel="shortcut icon" type="image/x-icon" href="{{ relBase }}/media/favicon/32.png">
+<link rel="icon" href="{{ relBase }}/media/favicon/logo-light.svg" type="image/x-icon">
+<link rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-light.svg" type="image/x-icon">
+<link rel="icon" href="{{ relBase }}/media/favicon/logo-light.svg" media="(prefers-color-scheme: light)" type="image/x-icon">
+<link rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-light.svg" media="(prefers-color-scheme: light)" type="image/x-icon">
 {%- comment %}
 <!-- It seems as if this tags significantly increase the loading time.
-<link async rel="icon" href="{{ relBase }}/media/favicon/logo-dark.svg" media="(prefers-color-scheme: dark)" type="image/x-icon" >
-<link async rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-dark.svg" media="(prefers-color-scheme: dark)" type="image/x-icon" >
+<link rel="icon" href="{{ relBase }}/media/favicon/logo-dark.svg" media="(prefers-color-scheme: dark)" type="image/x-icon" >
+<link rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-dark.svg" media="(prefers-color-scheme: dark)" type="image/x-icon" >
 -->
 {%- endcomment %}
 
@@ -130,17 +130,17 @@
                   FontAwesome
     ######################################### -->
 {%- endcomment %}
-<link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/fontawesome.css"/>
-<link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/brands.css"/>
-<link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/solid.css"/>
-<link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/regular.css"/>
+<link rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/fontawesome.css"/>
+<link rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/brands.css"/>
+<link rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/solid.css"/>
+<link rel="stylesheet" type="text/css" href="{{ relBase }}/assets/fontawesome-6.5.1/css/regular.css"/>
 
 {%- comment %}
 <!-- ########################################
                    website
     ######################################### -->
 {%- endcomment %}
-<link async rel="stylesheet" type="text/css" href="{{ relBase }}/assets/website.css">
+<link rel="stylesheet" type="text/css" href="{{ relBase }}/assets/website.css">
 <script async type="text/javascript" src="{{ relBase }}/assets/website.js"></script>
 
 {%- endif -%}
