Revert "add post filter `add_relBase`"
This reverts commit 08bc01e8a58256de993ffefe6462f33cbd5b052b.

--- a/src/_includes/main/splash.html
+++ b/src/_includes/main/splash.html
@@ -37,7 +37,7 @@
     {%- else -%}
     {%- assign splash_inclusion = "" -%}
     {%- endif -%}
-    {%- assign spl_content = splash_inclusion | pre_markdown | markdownify | replace_post: relBase -%}
+    {%- assign spl_content = splash_inclusion | pre_markdown | markdownify | replace_post -%}
     {% include main/splash-page.html content=spl_content overlay=splash.overlay overlay_background=splash.overlay_background scroll=splash.scroll content_raw=splash_inclusion data=splash.data index=forloop.index index0=forloop.index0 %}
     {%- endfor -%}
     {%- endif -%}
