--- a/src/_layouts/plain_splash.html
+++ b/src/_layouts/plain_splash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {%- include basics.html -%}
+    {%- include basics -%}
     {%- include main/head.html -%}
 </head>
 {% if page.external_link==nil and page.is_separator!=true -%}
