--- a/src/_includes/main/post-header.html
+++ b/src/_includes/main/post-header.html
@@ -54,7 +54,7 @@
             {%- endif %}
             {% endfor %}
         </div>
-        <div class="mt-2 text-muted smaller">
+        <div class="mt-2 text-muted smaller text-end">
             Posted on {{ post.date | date: "%B %-d, %Y" }}
             {% if post.author %}by {{ post.author }}{%- endif %}
         </div>
