blogposts: correct list layout

--- a/src/_layouts/blog_list.html
+++ b/src/_layouts/blog_list.html
@@ -51,7 +51,7 @@
             <h1>{{ postlist_page.title }} - {{ name }} "{{ key }}"</h1>
         </div>
 
-        <div class="blog-overview">
+        <div class="blog-overview py-4">
 
             <h2 class="d-none">List of Posts</h2>
             <div class="list-group list-group-flush mx-n4 mb-4">
