--- a/src/_layouts/blog_overview.html
+++ b/src/_layouts/blog_overview.html
@@ -43,7 +43,7 @@
         {% include content.html %}
         {%- endif -%}
 
-        <div class="row blog-overview">
+        <div class="row blog-overview py-4">
 
             <div class="col-12 col-lg-9">
                 <h2 class="d-none">List of Posts</h2>
