--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -35,16 +35,19 @@
         {%- assign link = relBase | append: i_page.url -%}
         {%- assign target = i_page.target | default: "_self" -%}
         {%- endif -%}
-        <div class="col-9 col-xs-8 col-sm-4 col-md-3">
-            <a href="{{ link }}" target="{{ target }}" class="link-quiet d-flex d-sm-block m-between-3 m-between-sm-0 align-items-center">
+        <div class="col-9 col-xs-8 col-sm-6 col-md-3">
+            <a href="{{ link }}" target="{{ target }}" class="link-quiet d-flex d-md-block m-between-3 m-between-md-0 align-items-center">
                 {% if i_page.icon %}
-                <div class="square w-fix-xxs w-fix-xs-over-sm w-fix-sm-over-md mx-sm-auto overflow-hidden mb-sm-2">
+                <div class="square w-fix-xxs w-fix-sm-over-md mx-md-auto overflow-hidden mb-md-2">
                     <div class="btn btn-{{ color }} rounded-0 {{ class }}">
                         <div class="d-flex justify-content-center align-items-center w-100">
                             <div class="big d-block d-sm-none">
                                 <i class="fa-fw {{ i_page.icon }}"></i>
                             </div>
-                            <div class="biggest d-none d-sm-block">
+                            <div class="d-none d-sm-block d-md-none">
+                                <i class="fa-fw {{ i_page.icon }}"></i>
+                            </div>
+                            <div class="biggest d-none d-md-block">
                                 <i class="fa-fw {{ i_page.icon }}"></i>
                             </div>
                         </div>
@@ -52,7 +55,7 @@
                 </div>
                 {% endif %}
                 <div class="link-{{ color }}">
-                    <div class="text-start d-block d-sm-none">
+                    <div class="text-start d-block d-md-none">
                         {{ i_page.title_shortcuts | default: i_page.title }}
                         {%- if target == "_blank" -%}
                         <i class="fa-solid fa-arrow-up-right-from-square icon-external-link"></i>
@@ -63,7 +66,7 @@
                         </div>
                         {% endif %}
                     </div>
-                    <div class="text-center d-none d-sm-block">
+                    <div class="text-center d-none d-md-block">
                         {{ i_page.title_shortcuts | default: i_page.title }}
                         {%- if target == "_blank" -%}
                         <i class="fa-solid fa-arrow-up-right-from-square icon-external-link"></i>
@@ -77,7 +80,7 @@
                 </div>
             </a>
         </div>
-        <div class="col-12 d-sm-none m-0"></div>
+        <div class="col-12 d-md-none m-0"></div>
         {%- assign first = false -%}
         {%- endfor -%}
     </div>
