--- a/less/general.less
+++ b/less/general.less
@@ -57,3 +57,9 @@ footer,
   font-size: calc(var(--bs-body-font-size) * 0.55);
   margin-left: calc(var(--bs-body-font-size) * 0.55 / 2);
 }
+
+.copybutton {
+  display: inline !important;
+  padding: 0 !important;
+  margin: -10px 0.25rem -5px !important;
+}
