--- a/src/_includes/sections/text.html
+++ b/src/_includes/sections/text.html
@@ -1,3 +1,3 @@
-<div class="section-text {{ include.class }}" id="section-{{ include.file }}">
+<div class="section-text {{ include.data.class }}" id="section-{{ include.file }}">
         {{ include.content }}
 </div>
